--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -5,48 +5,71 @@
    "metadata": {},
    "source": [
     "Group members\n",
-    "-Nubuhoro Divine 673390\n",
-    "-Igiraneza Eliphaz 673344\n",
-    "-viola awuor okello 673013\n",
-    "-Manuela Atuhurire -667294\n",
-    "-Maker Panom - 673168\n",
-    "-Grace Muguna"
+    "- Nubuhoro Divine 673390\n",
+    "- Igiraneza Eliphaz 673344\n",
+    "- Viola Awuor Okello 673013\n",
+    "- Manuela Atuhurire 667294\n",
+    "- Maker Panom 673168\n",
+    "- Grace Muguna"
    ]
   },
-
-# Question two 
-
-#finding the first 10 prime number
-def is_prime(num):
-    if num < 2:
-        return False
-    for i in range(2, int(num ** 0.5) + 1): #check divisibility from 2 up to 
-        if num % i == 0: ## If num is divisible by i, it's not prime
-            return False
-    return True
-
-def find_primes(n):
-    primes = []
-    num = 2
-    while len(primes) < n:
-        if is_prime(num):
-            primes.append(num)
-        num += 1
-    return primes
-
-# Example usage
-print(find_primes(10))
   {
    "cell_type": "markdown",
    "id": "b8768eba",
    "metadata": {},
    "source": [
-    " Password Validator"
+    "# Question Two: Finding the First 10 Prime Numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "0a16c1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 10 prime numbers are:\n",
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(num ** 0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def find_primes(n):\n",
+    "    primes = []\n",
+    "    num = 2\n",
+    "    while len(primes) < n:\n",
+    "        if is_prime(num):\n",
+    "            primes.append(num)\n",
+    "        num += 1\n",
+    "    return primes\n",
+    "\n",
+    "# Find the first 10 prime numbers\n",
+    "primes = find_primes(10)\n",
+    "print(\"The first 10 prime numbers are:\", primes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8768eba",
+   "metadata": {},
+   "source": [
+    "# Password Validator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0a16c1fc",
    "metadata": {},
    "outputs": [
@@ -61,27 +84,18 @@ print(find_primes(10))
     }
    ],
    "source": [
-    "\n",
-    "def is_valid_password(password): # it check if the password has at least 8 characters\n",
+    "def is_valid_password(password):\n",
     "    if len(password) < 8:\n",
-    "        return False  # it will return false if the characters are less than 8 characters\n",
-    "    check_upper = any(c.isupper() for c in password) # it check at least if there is one character that is uppercase\n",
-    "    check_digit = any(c.isdigit() for c in password) # it check at least if there is one character that is number\n",
-    "    check_special = any(c in \"!@#$%^&*\" for c in password) # it check for at least if there is one special character\n",
-    "    return check_upper and check_digit and check_special # it will return true if all the conditions are met\n",
+    "        return False\n",
+    "    check_upper = any(c.isupper() for c in password)\n",
+    "    check_digit = any(c.isdigit() for c in password)\n",
+    "    check_special = any(c in \"!@#$%^&*\" for c in password)\n",
+    "    return check_upper and check_digit and check_special\n",
     "\n",
-    "print(is_valid_password(\"Manuella@7\")) # it will print true because all the conditions are met\n",
-    "print(is_valid_password(\"Divine\")) # it will print false because there is no number\n",
-    "print(is_valid_password(\"Midda@1\")) # it will print false because the characters are less than 8"
+    "print(is_valid_password(\"Manuella@7\"))  # True\n",
+    "print(is_valid_password(\"Divine\"))  # False\n",
+    "print(is_valid_password(\"Midda@1\"))  # False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d60d13d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
