--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -15,7 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8768eba",
    "metadata": {},
    "source": [
     "# Question Two: Finding the First 10 Prime Numbers"
@@ -24,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a16c1fc",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "The first 10 prime numbers are:\n",
-      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
      ]
     }
    ],
@@ -56,12 +54,12 @@
     "\n",
     "# Find the first 10 prime numbers\n",
     "primes = find_primes(10)\n",
-    "print(\"The first 10 prime numbers are:\", primes)"
+    "print(\"The first 10 prime numbers are:\")\n",
+    "print(primes)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8768eba",
    "metadata": {},
    "source": [
     "# Password Validator"
@@ -70,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a16c1fc",
    "metadata": {},
    "outputs": [
     {
@@ -84,18 +81,17 @@
     }
    ],
    "source": [
-    
-def is_valid_password(password): # it check if the password has at least 8 characters
-    if len(password) < 8:
-        return False  # it will return false if the characters are less than 8 characters
-    check_upper = any(c.isupper() for c in password) # it check at least if there is one character that is uppercase
-    check_digit = any(c.isdigit() for c in password) # it check at least if there is one character that is number
-    check_special = any(c in "!@#$%^&*" for c in password) # it check for at least if there is one special character
-    return check_upper and check_digit and check_special # it will return true if all the conditions are met
-
-print(is_valid_password("Manuella@7")) # it will print true because all the conditions are met
-print(is_valid_password("Divine")) # it will print false because there is no number
-print(is_valid_password("Midda@1")) # it will print false because the characters are less than 8
+    "def is_valid_password(password):  # it check if the password has at least 8 characters\n",
+    "    if len(password) < 8:\n",
+    "        return False  # it will return false if the characters are less than 8 characters\n",
+    "    check_upper = any(c.isupper() for c in password)  # it check at least if there is one character that is uppercase\n",
+    "    check_digit = any(c.isdigit() for c in password)  # it check at least if there is one character that is number\n",
+    "    check_special = any(c in \"!@#$%^&*\" for c in password)  # it check for at least if there is one special character\n",
+    "    return check_upper and check_digit and check_special  # it will return true if all the conditions are met\n",
+    "\n",
+    "print(is_valid_password(\"Manuella@7\"))  # it will print true because all the conditions are met\n",
+    "print(is_valid_password(\"Divine\"))  # it will print false because there is no number\n",
+    "print(is_valid_password(\"Midda@1\"))  # it will print false because the characters are less than 8"
    ]
   }
  ],
@@ -106,15 +102,7 @@ print(is_valid_password("Midda@1")) # it will print false because the characters
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.13.2"
   }
  },
