--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -93,6 +93,37 @@
     "print(is_valid_password(\"Divine\"))  # it will print false because there is no number\n",
     "print(is_valid_password(\"Midda@1\"))  # it will print false because the characters are less than 8"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nested Loop Pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 4 \n",
+      "3 6 9 \n",
+      "4 8 12 16 \n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 4  # number of rows for the pattern\n",
+    "for x in range(1, r + 1):  # loop (outer) for each row (from 1 to \"r\")\n",
+    "    for y in range(1, x + 1):  # loop (inner) for each column in the current row\n",
+    "        print(x * y, end=' ')  # output the product of row and column index with space (no newline)\n",
+    "    print()  # print a newline after each row"
+   ]
   }
  ],
  "metadata": {
