--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -12,6 +12,60 @@
     "-Maker penom - 673168\n",
     "-grace muguna"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Grade Distribution:\n",
+      "A: 0\n",
+      "B: 0\n",
+      "C: 1\n",
+      "D: 0\n",
+      "F: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classify_grades(scores):\n",
+    "    grade_counts = {'A': 0, 'B': 0, 'C': 0, 'D': 0, 'F': 0}\n",
+    "    for score in scores:\n",
+    "        if score >= 90:\n",
+    "            grade_counts['A'] += 1\n",
+    "        elif score >= 80:\n",
+    "            grade_counts['B'] += 1\n",
+    "        elif score >= 70:\n",
+    "            grade_counts['C'] += 1\n",
+    "        elif score >= 60:\n",
+    "            grade_counts['D'] += 1\n",
+    "        else:\n",
+    "            grade_counts['F'] += 1\n",
+    "    return grade_counts\n",
+    "\n",
+    "# Get user input\n",
+    "scores_input = input(\"Enter your scores separated by spaces or commas: \")\n",
+    "\n",
+    "# Convert input to numerical values\n",
+    "entries = scores_input.replace(',', ' ').split()\n",
+    "scores = []\n",
+    "for entry in entries:\n",
+    "    try:\n",
+    "        scores.append(float(entry))\n",
+    "    except ValueError:\n",
+    "        print(f\"⚠️  Invalid entry ignored: {entry}\")\n",
+    "\n",
+    "# Generate and display results\n",
+    "result = classify_grades(scores)\n",
+    "print(\"\\nGrade Distribution:\")\n",
+    "for grade, count in result.items():\n",
+    "    print(f\"{grade}: {count}\")"
+   ]
   }
  ],
  "metadata": {
@@ -21,7 +75,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
