--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -15,20 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input Scores: [85, 92, 45, 74, 60]\n",
-      "Grade Counts: {'A': 1, 'B': 1, 'C': 1, 'D': 1, 'F': 1}\n"
+      "Input Scores: [56, 89, 90, 10]\n",
+      "Grade Counts: {'A': 1, 'B': 1, 'C': 0, 'D': 0, 'F': 2}\n"
      ]
     }
    ],
    "source": [
-    "def classify_grades(scores):\n",
+    "def classify_grades():\n",
+    "    # Prompt the user for input\n",
+    "    scores = input(\"Enter the list of scores separated by spaces: \")\n",
+    "    \n",
+    "    # Convert the input string into a list of integers\n",
+    "    scores = list(map(int, scores.split()))\n",
+    "    \n",
     "    # Initialize grade counts\n",
     "    grade_counts = {\"A\": 0, \"B\": 0, \"C\": 0, \"D\": 0, \"F\": 0}\n",
     "    \n",
@@ -49,9 +55,8 @@
     "    print(\"Input Scores:\", scores)\n",
     "    print(\"Grade Counts:\", grade_counts)\n",
     "\n",
-    "# Example usage\n",
-    "scores = [85, 92, 45, 74, 60]\n",
-    "classify_grades(scores)\n"
+    "# Call the function\n",
+    "classify_grades()\n"
    ]
   }
  ],
