--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +35,7 @@
     }
    ],
    "source": [
+    "# Define the function\n",
     "def classify_grades():\n",
     "    # Prompt the user for input\n",
     "    scores = input(\"Enter the list of scores separated by spaces: \")\n",
@@ -57,6 +65,40 @@
     "\n",
     "# Call the function\n",
     "classify_grades()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf16db1c",
+   "metadata": {},
+   "source": [
+    "Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7449bb30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 4 \n",
+      "3 6 9 \n",
+      "4 8 12 16 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested Loop pattern \n",
+    "r = 4 #number of rows for the pattern\n",
+    "for x in range(1, r + 1): #loop(outer) for each row (from 1 to \"r\")\n",
+    "    for y in range(1, x + 1): # loop(inner) for each column in the current row (from 1 to current row number)\n",
+    "        print(x * y, end=' ') # output of the product of the row and column index, with a space after (no newline))\n",
+    "    print() # Printing a newline after a completion of each row"
    ]
   }
  ],
