inputing valid password

--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -69,6 +69,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fef09eab",
+   "metadata": {},
+   "source": [
+    "Quetion 3 Password Validator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8654ec64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The password is valid.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid_password(password):\n",
+    "    # Check if the password has at least 8 characters\n",
+    "    if len(password) < 8:\n",
+    "        return False  # It will return false if the password is less than 8 characters\n",
+    "    \n",
+    "    # Check if there's at least one uppercase letter\n",
+    "    check_upper = any(c.isupper() for c in password)\n",
+    "    \n",
+    "    # Check if there's at least one digit\n",
+    "    check_digit = any(c.isdigit() for c in password)\n",
+    "    \n",
+    "    # Check if there's at least one special character\n",
+    "    check_special = any(c in \"!@#$%^&*\" for c in password)\n",
+    "    \n",
+    "    # Return True if all conditions are met\n",
+    "    return check_upper and check_digit and check_special\n",
+    "\n",
+    "# Prompt the user to input a password\n",
+    "password = input(\"Enter your password: \")\n",
+    "\n",
+    "# Check and print the result of the password validation\n",
+    "if is_valid_password(password):\n",
+    "    print(\"Your password is valid.\")\n",
+    "else:\n",
+    "    print(\"The password is invalid. It must have at least 8 characters, one uppercase letter, one number, and one special character.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf16db1c",
    "metadata": {},
    "source": [
