--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input Scores: [56, 89, 90, 10]\n",
-      "Grade Counts: {'A': 1, 'B': 1, 'C': 0, 'D': 0, 'F': 2}\n"
+      "Input Scores: [56, 89, 90, 10, 49]\n",
+      "Grade Counts: {'A': 1, 'B': 1, 'C': 0, 'D': 0, 'F': 3}\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef09eab",
+   "id": "c2e7b057",
    "metadata": {},
    "source": [
     "Quetion 3 Password Validator"
@@ -77,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8654ec64",
+   "execution_count": 3,
+   "id": "7b06cba8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The password is valid.\n"
+      "Your password is valid.\n"
      ]
     }
    ],
@@ -114,22 +114,21 @@
     "if is_valid_password(password):\n",
     "    print(\"Your password is valid.\")\n",
     "else:\n",
-    "    print(\"The password is invalid. It must have at least 8 characters, one uppercase letter, one number, and one special character.\")\n",
-    "\n"
+    "    print(\"The password is invalid. It must have at least 8 characters, one uppercase letter, one number, and one special character.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cf16db1c",
+   "id": "39c4d24d",
    "metadata": {},
    "source": [
-    "Question 4"
+    "Question 4 Nested loop pattern\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7449bb30",
+   "execution_count": 2,
+   "id": "452e625e",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +148,7 @@
     "for x in range(1, r + 1): #loop(outer) for each row (from 1 to \"r\")\n",
     "    for y in range(1, x + 1): # loop(inner) for each column in the current row (from 1 to current row number)\n",
     "        print(x * y, end=' ') # output of the product of the row and column index, with a space after (no newline))\n",
-    "    print() # Printing a newline after a completion of each row"
+    "    print() # Printing a newline after a completion of each row"
    ]
   }
  ],
