--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -150,6 +150,47 @@
     "        print(x * y, end=' ') # output of the product of the row and column index, with a space after (no newline))\n",
     "    print() # Printing a newline after a completion of each row"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4454aa94",
+   "metadata": {},
+   "source": [
+    "5. Palindrome Checker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e65de4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(word):\n",
+    "    cleaned_word = ''.join(word.lower().split()) # Remove all spaces and convert the word to lowercase\n",
+    "    reversed_word = ''# Initializing an empty string \n",
+    "    # Loop through the cleaned word and build the reversed word\n",
+    "    for i in range(len(cleaned_word) - 1, -1, -1):\n",
+    "        reversed_word += cleaned_word[i] \n",
+    "    # Check if the original cleaned word and the reversed word are the same\n",
+    "    if cleaned_word == reversed_word:\n",
+    "        return True  # It's a palindrome if they are the same\n",
+    "    else:\n",
+    "        return False  # It's not a palindrome if they are different\n",
+    "print(is_palindrome(\"22, Ana ,22\"))  # Output true\n",
+    "print(is_palindrome(\"neveR  odd OR EvEN\"))     # Output true\n",
+    "print(is_palindrome(\"These assignments are so tricky, they help us to think more\"))# Output: false"
+   ]
   }
  ],
  "metadata": {
