--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -69,6 +69,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "773be758",
+   "metadata": {},
+   "source": [
+    "Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "126502df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#finding the first 10 prime number\n",
+    "def is_prime(num):\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(num ** 0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def find_primes(n):\n",
+    "    primes = []\n",
+    "    num = 2\n",
+    "    while len(primes) < n:\n",
+    "        if is_prime(num):\n",
+    "            primes.append(num)\n",
+    "        num += 1\n",
+    "    return primes\n",
+    "\n",
+    "# Example usage\n",
+    "print(find_primes(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c2e7b057",
    "metadata": {},
    "source": [
