--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -108,7 +108,7 @@
     "        num += 1\n",
     "    return primes\n",
     "\n",
-    "# Example usage\n",
+    "# Examples usage\n",
     "print(find_primes(10))"
    ]
   },
@@ -152,7 +152,7 @@
     "    # Return True if all conditions are met\n",
     "    return check_upper and check_digit and check_special\n",
     "\n",
-    "# Prompt the user to input a password\n",
+    "# Prompt the users to input a password\n",
     "password = input(\"Enter your password: \")\n",
     "\n",
     "# Check and print the result of the password validation\n",
