--- a/GroupAssignment.ipynb
+++ b/GroupAssignment.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9453dc90",
    "metadata": {},
    "source": [
     "Group members\n",
@@ -10,11 +11,12 @@
     "-viola awuor okello 673013\n",
     "-Manuela Atuhurire -665404\n",
     "-Maker penom - 673168\n",
-    "-grace muguna"
+    "-grace muguna - 673294"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d10c8682",
    "metadata": {},
    "source": [
     "Question 1"
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ca3eb234",
    "metadata": {},
    "outputs": [
     {
